add swagger docs endpoint
