# pkg/apiserver/api/v1/doc.pb.go
@@ -1,0 +1,144 @@
+/*
+Copyright 2020 The KubeCarrier Authors.
+
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+*/
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// source: doc.proto
+
+package v1
+
+import (
+	context "context"
+	fmt "fmt"
+	math "math"
+
+	proto "github.com/golang/protobuf/proto"
+	empty "github.com/golang/protobuf/ptypes/empty"
+	_ "google.golang.org/genproto/googleapis/api/annotations"
+	httpbody "google.golang.org/genproto/googleapis/api/httpbody"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// Reference imports to suppress errors if they are not otherwise used.
+var _ = proto.Marshal
+var _ = fmt.Errorf
+var _ = math.Inf
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the proto package it is being compiled against.
+// A compilation error at this line likely means your copy of the
+// proto package needs to be updated.
+const _ = proto.ProtoPackageIsVersion3 // please upgrade the proto package
+
+func init() {
+	proto.RegisterFile("doc.proto", fileDescriptor_37cb16cf10c66117)
+}
+
+var fileDescriptor_37cb16cf10c66117 = []byte{
+	// 182 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xe2, 0xe2, 0x4c, 0xc9, 0x4f, 0xd6,
+	0x2b, 0x28, 0xca, 0x2f, 0xc9, 0x17, 0x12, 0xca, 0x2e, 0x4d, 0x4a, 0x4d, 0x4e, 0x2c, 0x2a, 0xca,
+	0x4c, 0x2d, 0xd2, 0x4b, 0x2c, 0xc8, 0xd4, 0x2b, 0x33, 0x94, 0x92, 0x4c, 0xcf, 0xcf, 0x4f, 0xcf,
+	0x49, 0xd5, 0x4f, 0x2c, 0xc8, 0xd4, 0xcf, 0x28, 0x29, 0x29, 0x48, 0xca, 0x4f, 0xa9, 0x84, 0x28,
+	0x97, 0x92, 0x41, 0x92, 0x4a, 0xcc, 0xcb, 0xcb, 0x2f, 0x49, 0x2c, 0xc9, 0xcc, 0xcf, 0x2b, 0x86,
+	0xca, 0x4a, 0x43, 0x65, 0xc1, 0xbc, 0xa4, 0xd2, 0x34, 0xfd, 0xd4, 0xdc, 0x82, 0x12, 0xa8, 0x56,
+	0xa3, 0x60, 0x2e, 0x66, 0x97, 0xfc, 0x64, 0x21, 0x1f, 0x2e, 0xf6, 0xe0, 0xf2, 0xc4, 0xf4, 0xf4,
+	0xd4, 0x22, 0x21, 0x31, 0x3d, 0x88, 0x7a, 0x3d, 0x98, 0x7a, 0x3d, 0x57, 0x90, 0x7a, 0x29, 0x11,
+	0x98, 0x38, 0xc8, 0x3d, 0x1e, 0x25, 0x25, 0x05, 0x4e, 0xf9, 0x29, 0x95, 0x4a, 0xc2, 0x4d, 0x97,
+	0x9f, 0x4c, 0x66, 0xe2, 0x15, 0xe2, 0xd6, 0x2f, 0x33, 0xd4, 0x2f, 0x86, 0x18, 0xe1, 0xc4, 0x12,
+	0xc5, 0x54, 0x66, 0x98, 0xc4, 0x06, 0x36, 0xc0, 0x18, 0x10, 0x00, 0x00, 0xff, 0xff, 0xdc, 0xfb,
+	0xa5, 0x91, 0xd8, 0x00, 0x00, 0x00,
+}
+
+// Reference imports to suppress errors if they are not otherwise used.
+var _ context.Context
+var _ grpc.ClientConnInterface
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+const _ = grpc.SupportPackageIsVersion6
+
+// DocClient is the client API for Doc service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://godoc.org/google.golang.org/grpc#ClientConn.NewStream.
+type DocClient interface {
+	Swagger(ctx context.Context, in *empty.Empty, opts ...grpc.CallOption) (*httpbody.HttpBody, error)
+}
+
+type docClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewDocClient(cc grpc.ClientConnInterface) DocClient {
+	return &docClient{cc}
+}
+
+func (c *docClient) Swagger(ctx context.Context, in *empty.Empty, opts ...grpc.CallOption) (*httpbody.HttpBody, error) {
+	out := new(httpbody.HttpBody)
+	err := c.cc.Invoke(ctx, "/kubecarrier.api.v1.Doc/Swagger", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// DocServer is the server API for Doc service.
+type DocServer interface {
+	Swagger(context.Context, *empty.Empty) (*httpbody.HttpBody, error)
+}
+
+// UnimplementedDocServer can be embedded to have forward compatible implementations.
+type UnimplementedDocServer struct {
+}
+
+func (*UnimplementedDocServer) Swagger(ctx context.Context, req *empty.Empty) (*httpbody.HttpBody, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method Swagger not implemented")
+}
+
+func RegisterDocServer(s *grpc.Server, srv DocServer) {
+	s.RegisterService(&_Doc_serviceDesc, srv)
+}
+
+func _Doc_Swagger_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(empty.Empty)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(DocServer).Swagger(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/kubecarrier.api.v1.Doc/Swagger",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(DocServer).Swagger(ctx, req.(*empty.Empty))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+var _Doc_serviceDesc = grpc.ServiceDesc{
+	ServiceName: "kubecarrier.api.v1.Doc",
+	HandlerType: (*DocServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "Swagger",
+			Handler:    _Doc_Swagger_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "doc.proto",
+}
